Fix z-index conflict between chat drawer and channel topic.

--- a/app/client/main.less
+++ b/app/client/main.less
@@ -83,7 +83,7 @@ html, body, .container, .content {
   color: black;
   text-decoration: none !important;
   background-color: #eeeeee !important;
-  z-index: 2;
+  z-index: 1;
   position: absolute;
   width: 100%;
   overflow-x: hidden;
@@ -620,7 +620,7 @@ body {
 #chat.drawer-container.show-drawer.show-drawer-left
 .drawer.drawer-left {
   @media (max-width: 992px) {
-    z-index: 1;
+    z-index: 2;
     display: block !important;
   }
 }
@@ -628,7 +628,7 @@ body {
 #chat.drawer-container.show-drawer.show-drawer-right
 .drawer.drawer-right {
   @media (max-width: 768px) {
-    z-index: 1;
+    z-index: 2;
     display: block !important;
     right: -18.3%;
   }
